--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
   <link rel="stylesheet" href=/css/main.css>
   <link rel="stylesheet" href=/css/magnific-popup.css>
 
-  
-
 
 <html>
   <body lang="en">
@@ -32,8 +30,7 @@
 <div id="nav">
   
   <a href="https://www.linkedin.com/dms/C5104AQHwNJoXvzzffg/profile-originalphoto-shrink_900_1200/0?m=AQJWIk0az8o4jgAAAXFPRUrLyjt0y-SJl_5CGljKYF-ywrAmWG-hFCyNyw&e=1586259273&v=beta&t=fo3zrXKPCO9rcPKALjxDvoh-TfNEiCM_8jBKmg3PUEA" class="image-link">
-    <img class="logo" src="https://www.linkedin.com/dms/C5104AQHwNJoXvzzffg/profile-originalphoto-shrink_900_1200/0?m=AQJWIk0az8o4jgAAAXFPRUrLyjt0y-SJl_5CGljKYF-ywrAmWG-hFCyNyw&e=1586259273&v=beta&t=fo3zrXKPCO9rcPKALjxDvoh-TfNEiCM_8jBKmg3PUEA"/>
-  </a>
+    <img width="128" src="https://media-exp1.licdn.com/dms/image/C5103AQFk7-Ti-6U8TQ/profile-displayphoto-shrink_200_200/0?e=1591833600&amp;v=beta&amp;t=mPvsyKI1aNheaecn2GDPq6WSFp9GXW7Eeh_T6_oM8x0" height="128" alt="Edit photo" id="ember422" class="profile-photo-edit__preview ember-view">  </a>
   
   
   <ul>
@@ -72,8 +69,6 @@
 
 <p><strong>Data Analyst</strong></p>
 
-<p><br /></p>
-
 <p>
 	Using Python to design and develop the data pipelines/ ETL process (like using join in MySQL, or using MapReduce/ aggregation pipeline in MongoDB);
 </p>
@@ -97,24 +92,35 @@
 
 <p><strong>Consultant/ Research Analyst</strong></p>
 
-<p><br /></p>
-
 <p>	Evaluating operation research and business processes, anticipating requirements, and consulting for industrial partners</p>
 
 
 <p><br /></p>
 
-<h1 id="education">Education</h1>
+<h1>Education</h1>
 
 <hr />
 
-<h3 id="the-ohio-state-university">The Ohio State University</h3>
+<h3>Hong Kong Polytechnic University</h3>
 
 <p>BSc (Hons) in
 Enterprising Engineering with Management
 Second Class Honours, Division 1
 </p>
 
-    </div>
+</div>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src=/js/jquery-1.11.2.min.js></script>
+  <script src=/js/main.js></script>
+
+  
+  <script src=/js/jquery.magnific-popup.min.js></script>
+
+  
+  
+
+  
 </body>
 </html>
+
