--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 <div id="nav">
   
-  <a href="https://www.linkedin.com/dms/C5104AQHwNJoXvzzffg/profile-originalphoto-shrink_900_1200/0?m=AQJWIk0az8o4jgAAAXFPRUrLyjt0y-SJl_5CGljKYF-ywrAmWG-hFCyNyw&e=1586259273&v=beta&t=fo3zrXKPCO9rcPKALjxDvoh-TfNEiCM_8jBKmg3PUEA" class="image-link">
-    <img width="128" src="https://media-exp1.licdn.com/dms/image/C5103AQFk7-Ti-6U8TQ/profile-displayphoto-shrink_200_200/0?e=1591833600&amp;v=beta&amp;t=mPvsyKI1aNheaecn2GDPq6WSFp9GXW7Eeh_T6_oM8x0" height="128" alt="Edit photo" id="ember422" class="profile-photo-edit__preview ember-view">  </a>
-  
+  <a href="/portrait.jpg" class="image-link">
+    <img class="logo" src="/portrait.jpg"/>
+  </a>
   
   <ul>
     
