--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ Enterprising Engineering with Management
 Second Class Honours, Division 1
 </p>
     </div>
+</div>
 <div id="sidebar">
   
   <a href="/portrait.jpg" class="image-link">
