--- a/index.html
+++ b/index.html
@@ -88,12 +88,19 @@
 	Support other teams for ad-hoc reports analysis
 </p>
 
-<h3 id="The Hong Kong Polytechnic University">The Hong Kong Polytechnic University</h3>
+<h3 id="The Hong Kong Polytechnic University">The Hong Kong Polytechnic University (Jul 2018 – Jun 2019)</h3>
 
 <p><strong>Consultant/ Research Analyst</strong></p>
 
 <p>	Evaluating operation research and business processes, anticipating requirements, and consulting for industrial partners</p>
 
+<h3 id="Dou4la">Dou4la (Jan 2018 – Jun 2018)</h3>
+
+<p><strong>Data Analyst</strong></p>
+
+<p>	Conducting customer segmentation analysis by using K-means clustering in Python</p>	
+	       
+<p>	Evaluating and optimizing GA, Facebook marketing campaigns launch time by visualizing website traffic data in Tableau</p>					    
 
 <p><br /></p>
 
