--- a/index.html
+++ b/index.html
@@ -114,7 +114,16 @@
 Enterprising Engineering with Management
 Second Class Honours, Division 1
 </p></div>
-					     </div>
+        <div class="social">
+    <div>
+        <a href="https://github.com/maxdvance">Github</a>
+    </div>
+  
+    <div>
+        <a href="https://www.linkedin.com/in/max-mak/">LinkedIn</a>
+    </div>
+  
+</div>
 <div id="sidebar">
   
   <a href="/portrait.jpg" class="image-link">
