--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
 
 <hr />
 
-<p><br /></p>
-
 <h3 id="Goxip">Goxip (Sep 2019 - Present)</h3>
 
 <p><strong>Data Analyst</strong></p>
@@ -120,6 +118,7 @@ Second Class Honours, Division 1
     <div>
         <a href="https://www.linkedin.com/in/max-mak/">LinkedIn</a>
     </div>
+						      </div>
   
 </div>
 <div id="sidebar">
