--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <p>Python, SQL, MongoDB, Machine Learning</p>
  
+<p>"Life is short (You need Python)" -- Bruce Eckel</p>
+
 <p><br /></p>
 
 <h1 id="work">Work</h1>
