--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 
 <h3">Data Analyst</h3>
 
-<p>Python, SQL, MongoDB, Machine Learning</p>
+<p>Python, SQL, MongoDB</p> 
  
 <p>"Life is short (You need Python)" -- Bruce Eckel</p>
+
+<p>Big Data|Artificial Intelligence|Machine Learning|Predictive Analytics|Data Mining|Data Science</p>			    
 
 <p><br /></p>
 
